emove deprecated /events endpoints and event dataset
