# src/main/java/com/opendatahub/api/timeseries/ninja/DataFetcher.java
@@ -343,7 +343,7 @@ public class DataFetcher {
 	}
 
 	private enum AclType{
-		stations, events;
+		stations;
 
 		public final Map<String, String> rulesCache = new ConcurrentHashMap<>();
 	}
@@ -464,99 +464,6 @@ public class DataFetcher {
 		long timeExec = timer.stop();
 
 		setStats("fetchStationTypes", representation, queryResult.size(), 0, timeExec, sql, null);
-
-		return queryResult;
-	}
-
-	public List<Map<String, Object>> fetchEventOrigins(final Representation representation) {
-
-		if (!representation.isEvent()) {
-			throw new SimpleException(ErrorCode.METHOD_NOT_ALLOWED, "fetchEventOrigins",
-					representation.getTypeAsString());
-		}
-
-		Timer timer = new Timer();
-
-		String sql = "select distinct origin as id from event order by 1";
-		timer.start();
-		List<Map<String, Object>> queryResult = QueryExecutor
-				.init()
-				.build(sql, true, timeZone);
-		long timeExec = timer.stop();
-
-		setStats("fetchEventOrigins", representation, queryResult.size(), 0, timeExec, sql, null);
-
-		return queryResult;
-	}
-
-	public List<Map<String, Object>> fetchEvents(String originList, boolean latestOnly, OffsetDateTime from,
-			OffsetDateTime to, final Representation representation) {
-
-		if (!representation.isEvent()) {
-			throw new SimpleException(ErrorCode.METHOD_NOT_ALLOWED, "fetchEvents", representation.getTypeAsString());
-		}
-
-		Set<String> originSet = QueryBuilder.csvToSet(originList);
-
-		String aclWhereClause = getAclWhereClause(AclType.events, roles);
-
-		Timer timer = new Timer();
-
-		timer.start();
-		SelectExpansion se = new SelectExpansionConfig().getSelectExpansion();
-		QueryBuilder query = QueryBuilder
-				.init(se, select, where, distinct, "event", "location", "provenanceevent")
-				.addSqlIf(
-						"with latest as (select e.id, row_number() over(partition by e.origin, e.event_series_uuid order by e.event_interval desc) as rank from event e)",
-						latestOnly)
-				.addSql("select")
-				.addSqlIf("distinct", distinct)
-				.addSqlIf("ev.origin as _eventorigin, ev.event_series_uuid as _eventseriesuuid, ev.uuid as _eventuuid",
-						!representation.isFlat())
-				.addSqlIfDefinitionAnd(", ev.location_id::text as _locationid", "location", !representation.isFlat())
-				.expandSelectPrefix(", ", !representation.isFlat())
-				.addSql("from event ev")
-				.addSqlIf("join latest lat on lat.id = ev.id", latestOnly)
-				.addSqlIfDefinition("left join provenance pr on ev.provenance_id = pr.id", "provenanceevent")
-				.addSqlIfDefinition("left join location loc on ev.location_id = loc.id", "location")
-				.addSqlIfAlias("left join metadata evm on evm.id = ev.meta_data_id", "evmetadata")
-				.addSql("where 1 = 1")
-				.addSqlIfNotNull("and", aclWhereClause)
-				.addSqlIfNotNull(aclWhereClause, aclWhereClause)
-				.addSqlIf("and lat.rank = 1", latestOnly)
-				.setParameterIfNotNull("from", from, "and (upper(ev.event_interval) is null or upper(ev.event_interval) > :from::timestamp)")
-				.setParameterIfNotNull("to", to, "and lower(ev.event_interval) <= :to::timestamp")
-				.setParameterIfNotEmptyAnd("origins", originSet, "and ev.origin in (:origins)",
-						!originSet.contains("*"))
-				.expandWhere()
-				.expandGroupByIf("_eventorigin, _eventseriesuuid, _eventuuid",
-						!representation.isFlat() && !se.getUsedDefNames().contains("location"))
-				.addSqlIf("order by _eventorigin, _eventseriesuuid, _eventuuid",
-						!representation.isFlat() && !se.getUsedDefNames().contains("location"))
-				.expandGroupByIf("_eventorigin, _eventseriesuuid, _eventuuid, _locationid",
-						!representation.isFlat() && se.getUsedDefNames().contains("location"))
-				.addSqlIf("order by _eventorigin, _eventseriesuuid, _eventuuid, _locationid",
-						!representation.isFlat() && se.getUsedDefNames().contains("location"))
-				.addLimit(limit)
-				.addOffset(offset);
-		long timeBuild = timer.stop();
-
-		LOG.debug(query.getSql());
-
-		// We need null values while tree building. We remove them during the output
-		// generation
-		timer.start();
-		List<Map<String, Object>> queryResult = QueryExecutor
-				.init()
-				.addParameters(query.getParameters())
-				.build(query.getSql(), ignoreNull && representation.isFlat(), timeZone);
-		long timeExec = timer.stop();
-
-		LOG.trace(queryResult.toString());
-
-		Map<String, Object> logData = new HashMap<>();
-		logData.put("origins", originSet);
-		setStats("fetchEvents", representation, queryResult.size(), timeBuild, timeExec, query.getSql(), logData);
 
 		return queryResult;
 	}
